--- a/.gitignore
+++ b/.gitignore
@@ -133,7 +133,9 @@ dmypy.json
 .DS_Store
 .AppleDouble
 .LSOverride
-/yatube/static
+
+static/
+posts/static/
 
 *.sublime-project
 *.sublime-workspace
